--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.0",
+    "canvas": "^3.1.0",
     "clsx": "^2.1.1",
     "commander": "^12.0.0",
     "glob": "^10.3.10",
@@ -21,6 +22,7 @@
     "puppeteer": "^22.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
     "zod": "^3.24.2"
   },
