--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
     "storybook": "storybook dev -p 6006",
     "build:mcp": "tsup --config tsup.config.ts",
     "build-storybook": "storybook build",
-    "postinstall": "npx puppeteer browsers install chrome"
+    "postinstall": "npx puppeteer browsers install chrome && cd node_modules/canvas && npm run install"
   },
   "dependencies": {
+    "@mermaid-js/mermaid-cli": "^11.4.2",
     "@mermaid-js/mermaid-zenuml": "^0.2.0",
     "@modelcontextprotocol/sdk": "^1.6.0",
     "canvas": "^3.1.0",
     "clsx": "^2.1.1",
     "commander": "^12.0.0",
     "glob": "^10.3.10",
+    "mermaid": "^11.4.1",
     "next": "15.1.7",
     "puppeteer": "^22.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
-    "zod": "^3.24.2",
-    "mermaid": "^11.4.1",
-    "@mermaid-js/mermaid-cli": "^11.4.2"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
@@ -62,6 +62,11 @@
   "eslintConfig": {
     "extends": [
       "plugin:storybook/recommended"
+    ]
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "canvas"
     ]
   }
 }
