--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "storybook": "storybook dev -p 6006",
     "build:mcp": "tsup --config tsup.config.ts",
     "build-storybook": "storybook build",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "postinstall": "npx puppeteer browsers install chrome && cd node_modules/canvas && npm run install"
   },
   "dependencies": {
@@ -51,8 +52,11 @@
     "esbuild-register": "^3.6.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-storybook": "^0.11.3",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "storybook": "^8.5.8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
